# wireguard-web-interface

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
client/: Cargo.toml  index.html
client/src/: client_list.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  wg_conf.rs
wg_wrapper/: Cargo.toml
wg_wrapper/src/: main.rs
