[package]
name = "client"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
#seed = { path = "../../seed/" }
seed = "0.7.0"
serde = "^1.0.111"
wasm-bindgen = "^0.2.63"
js-sys = "0.3.40"

shared = { path = "../shared"}

[dependencies.web-sys]
version = "^0.3.40"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    "KeyboardEvent"
]
