[package]
name = "client"
version = "0.1.0"
authors = ["Germain Wessely"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = "0.7.0"
serde = "^1.0.116"
wasm-bindgen = "^0.2.68"
js-sys = "0.3.45"

shared = { path = "../shared"}

[dependencies.web-sys]
version = "^0.3.45"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    "KeyboardEvent"
]
