[package]
name = "client"
version = "0.1.0"
authors = ["Germain Wessely"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = "0.9.1"
serde = "^1.0.117"
wasm-bindgen = "^0.2.70"
js-sys = "0.3.47"

shared = { path = "../shared"}

[dependencies.web-sys]
version = "^0.3.47"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    "KeyboardEvent"
]
