[package]
name = "server"
version = "0.1.0"
authors = ["Germain Wessely"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-files = "0.5.0"
actix-multipart = "0.3.0"
tokio-timer = "0.2.13"
get_if_addrs = "0.5.3"
actix-identity = "0.3.1"
actix-http = "2.2.0"
jfs = "0.6.2"
serde = { version = "1.0.123", features = ["derive"]}
ipnet = { version = "2.3", features = ["serde"] }
tempfile = "3.2.0"
bcrypt = "0.9"
regex = "1.4.3"
lazy_static = "1.4.0"


shared = { path = "../shared" }
