[package]
name = "server"
version = "0.1.0"
authors = ["Germain Wessely"]
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-rt = "2.7.0"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
tokio-timer = "0.2.13"
get_if_addrs = "0.5.3"
actix-identity = "0.4.0"
actix-http = "3.0.4"
jfs = "0.7.1"
serde = { version = "1.0.123", features = ["derive"]}
ipnet = { version = "2.3", features = ["serde"] }
tempfile = "3.2.0"
bcrypt = "0.13.0"
regex = "1.4.3"
lazy_static = "1.4.0"


shared = { path = "../shared" }
